--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,14 +15,15 @@ include = ["src/**", "LICENSE-*", "README.md", "benches/*.rs"]
 bench = false
 
 [dependencies]
-weezl = "0.1.8"
+weezl = { version = "0.1.8", default-features = false, features = ["alloc"] }
+no_std_io = { version = "0.6.0", features = ["nightly"] }
 color_quant = { version = "1.1", optional = true }
 
 [dev-dependencies]
 glob = "0.3"
 criterion = "0.5.1"
 png = "0.17.10"
-rayon = "1.8.0" # for parallel reencoding example
+rayon = "1.8.0"     # for parallel reencoding example
 
 [features]
 default = ["raii_no_panic", "std", "color_quant"]
